--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Gallery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
 <div id="video-gallery"></div>
 
-<script src="script.js"></script>
+<div id="pdf-gallery"></div>
+
+<div id="'audio-gallery"></div>
+
+<script src="assets/js/script.js"></script>
 </body>
 </html>
