finished the architecture of get_data.py

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 
 <div id="pdf-gallery"></div>
 
-<div id="'audio-gallery"></div>
+<audio id="'audio-gallery">
+
+    <source src= 
+'data/audio/onrepeat.mp3'
+                type="audio/mp3"> 
+
+</audio>
 
 <script src="assets/js/script.js"></script>
 </body>
