--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<h1 class="center-screen">Gallery</h1>
 
-<div id="video-gallery"></div>
+<div id="video-gallery" class="center-screen"></div>
 
-<div id="pdf-gallery"></div>
+<div id="pdf-gallery" class="center-screen"></div>
 
-<audio id="'audio-gallery">
-
-    <source src= 
-'data/audio/onrepeat.mp3'
-                type="audio/mp3"> 
-
-</audio>
+<div id="audio-gallery" class="audio-gallery">
+</div>
 
 <script src="assets/js/script.js"></script>
 </body>
