fixed position of divs

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
 <h1 class="center-screen">Gallery</h1>
 
-<div id="video-gallery" class="center-screen"></div>
 
-<div id="pdf-gallery" class="center-screen"></div>
+<div id="video-gallery" style="float: left; width: 1000px;"></div>
 
-<div id="audio-gallery" class="audio-gallery">
+<div id="pdf-gallery" style="float: left; width: 600px;"></div>
+
+<div id="audio-gallery" class="audio-gallery " style="float: left; width: 600px;">
 </div>
 
 <script src="assets/js/script.js"></script>
